--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="bg-black">
     <main>
       <section id="hero" class="hero text-cenetr">
         <div class="containers">
@@ -154,18 +154,19 @@
         </div>
       </section>
     </main>
-    <footer class="bg-[#000000]">
+    <footer class="bg-[#000000] pb-[100px]">
       <div class="containers flex items-end">
         <img
           class="w-[80%] ml-[10%] mr-[2%]"
           src="./images/footer-images.png"
           alt="footer-images"
         />
-        <a href="#hero">
+        <a class="fixed right-[20px] bottom-[50px]" href="#hero">
           <img class="" src="./images/footer-icon.svg" alt="footer-images"
         /></a>
       </div>
     </footer>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
